gateway/route.yml
# chrono @ 2022-07

# https://github.com/kubernetes-sigs/gateway-api
# kubectl apply -k config/crd

# kubectl get gatewayclass
# kubectl get httproute

---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: kong-gc
spec:
  controllerName: konghq.com/kic-gateway-controller

---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  annotations:
    konghq.com/gateway-unmanaged: kong/gateway-kong-proxy
  name: kong-gtw
spec:
  gatewayClassName: kong-gc

  listeners:
  - name: proxy
    port: 80
    protocol: HTTP

---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: kong-route
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: kong-gtw
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: ngx-svc
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /ngx

---
